# nornyx

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODEX_GOAL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.5.1.md  RELEASE_NOTES_v1.5.2.md  RELEASING.md  REPLACEMENT_BASELINE_README.md  SECURITY.md  manifest.json  pyproject.toml
adapters/nornyx-agentic-adapters/: CHANGELOG.md  README.md  pyproject.toml
adapters/nornyx-agentic-adapters/docs/: COMPATIBILITY.md  MIGRATION.md
adapters/nornyx-agentic-adapters/scripts/: test_wheel_install.py
adapters/nornyx-agentic-adapters/src/nornyx_agentic_adapters/: __init__.py  _compat.py  binding.py  coverage.py  enforcement.py  errors.py  metadata.py
adapters/nornyx-agentic-adapters/tests/: test_binding.py  test_compat.py  test_coverage.py  test_enforcement.py  test_errors.py  test_import_boundary.py  test_metadata.py  test_no_network.py  test_version_consistency.py
docs/: 00_EXECUTIVE_OVERVIEW.md  01_LANGUAGE_SPEC_v0_1.md  02_ARCHITECTURE.md  03_ROADMAP_TO_v1_AND_BEYOND.md  04_AI_ENGINEERING_REQUIREMENTS_MATRIX.md  05_SECURITY_MODEL.md  06_CONTEXT_ENGINEERING.md  07_HARNESS_ENGINEERING.md  08_EVALS_AND_GUARDRAILS.md  09_SELF_HEALING_AND_RECURSIVE_IMPROVEMENT.md  10_EXTENSION_PROTOCOLS_MCP_A2A.md  11_OBSERVABILITY_EVIDENCE.md  12_COMPILER_MVP_PLAN.md  13_RISK_REGISTER.md  14_REFERENCES.md  15_SMART_PROMPTS.md  16_FINAL_LANGUAGE_TARGET.md  17_AGENTIC_REPO_HARNESS_TEMPLATE_INTEGRATION.md  18_PHASES_AS_GOALS_MODEL.md  19_NORNYX_DEVELOPMENT_GOAL_LEDGER.md  22_DEVELOPER_PMO_PORTAL.md  23_DISTINCT_LANGUAGE_STRATEGY.md  24_EASY_INSTALL_USE_ADAPT_INTEGRATE.md  25_LLM_NATIVE_LANGUAGE_DX.md  27_SAFE_DEVELOPMENT_ACCELERATION_OVERLAY.md  28_NORNYX_PRODUCT_THESIS_SHORT.md  29_FIRST_CLASS_DELIVERY_STATE_RENDERERS.md  30_NORNYX_OPTIONAL_PORTAL_CONTRACT_EXTENSION.md  31_AI_PATTERN_LIFECYCLE.md  32_NORNYX_EVERGREEN_ASSURANCE.md  33_PRODUCT_TO_OPERATIONS_LIFECYCLE_ROADMAP.md  34_HANDOVER_AND_AMBIGUITY_CONTROLS.md  35_DECISION_BOUNDARY_AND_EVIDENCE_QUALITY.md  36_NORNYX_REQUIREMENT_TRIAGE_MATRIX.md  37_AGENT_REQUIREMENT_DISCOVERY_WORKFLOW.md  38_NORNYX_AUTHORING_ASSISTANT_ROADMAP.md  39_NORNYX_ZERO_FRICTION_ADOPTION_PACK.md  40_NORNYX_DOMAIN_PROFILES_v0_3.md  41_NORNYX_ADAPTER_CONTRACTS_v0_4.md  42_NORNYX_GRAPH_VALIDATION_v0_5.md  (+26 more)
examples/: agentic_network.nyx  governance_foundations.nyx  nornyx_decision_boundary_evidence_quality.nyx  nornyx_distinct_language_showcase.nyx  nornyx_evergreen_assurance.yaml  nornyx_graph_demo.nyx  nornyx_graph_demo_expanded.nyx  nornyx_handover_and_ambiguity.nyx  nornyx_pattern_lifecycle.nyx  nornyx_portal_contract.nyx  nornyx_product_to_ops_lifecycle.nyx  nornyx_roadmap_goals.nyx  nornyx_v04_adapter_contracts.nyx  self_healing.nyx
extensions/: a2a.yaml  mcp.yaml  opentelemetry-genai.yaml
integrations/: README.md
nornyx/: __init__.py  adoption.py  agentic_artifacts.py  agentic_evidence.py  authoring_assistant.py  bounded_execution.py  checker.py  cli.py  connector_runtime.py  context_builder.py  dev_quality.py  doctor.py  editor_tools.py  errors.py  eval_import.py  eval_runtime.py  evergreen.py  evidence.py  explain.py  fmt.py  generation_drift.py  generator.py  goal_templates.py  goals.py  governed_package.py  handover.py  harness_runtime.py  kpi_metrics.py  language_evolution.py  package_scanner.py  parser.py  path_security.py  patterns.py  policy_runtime.py  portal_contract.py  product_lifecycle.py  profiles.py  regulated_controls.py  release_readiness.py  renderers.py  (+6 more)
profiles/: agentic_repo_harness.yaml  ai_coding.yaml  ai_governance.yaml  business_ops.yaml  finance_ops.yaml  legacy_upgrade.yaml  minimal.yaml  nornyx_language.yaml  regulated.yaml  standard.yaml  telecom_ops.yaml
schemas/: adapter_conformance_report.schema.json  adapter_contract.schema.json  agent_identities_v1.schema.json  agentic_capabilities_v1.schema.json  agentic_network_v1.schema.json  connector_contract_conformance.schema.json  connector_manifest.schema.json  effective_governance_v2.schema.json  evidence_quality.schema.json  governance_approval_model_v1.schema.json  governance_approval_model_v2.schema.json  governance_evidence_v1.schema.json  governance_exception_v1.schema.json  governance_module_v1.schema.json  governed_package.schema.json  handover_contract.schema.json  nornyx_v0_1.schema.json  nornyx_v1_0.schema.json  pattern_lifecycle.schema.json  portal_contract.schema.json  profile_pack_v1.schema.json  profiles_lock_v1.schema.json  release_candidate_stabilization.schema.json  separation_of_duties_v1.schema.json
scripts/: agentic_network_ci.py  bootstrap.sh  capture_profile_starter_baselines.py  check-public-boundary.py  check_compatibility_migrations.py  test_wheel_install.py  update_dev_pmo_status.py  wheel_network_guard.py
templates/: README.md
tests/: symlink_support.py  test_agentic_authz.py  test_agentic_crewai_native.py  test_agentic_facade_surface.py  test_agentic_integrations.py  test_agentic_network_artifacts.py  test_agentic_network_delegation.py  test_agentic_network_evidence.py  test_agentic_network_governance.py  test_agentic_support_example.py  test_architecture_governance.py  test_authoring_assistant_roadmap.py  test_change_governance.py  test_cli_dx.py  test_cli_examples.py  test_cli_schema.py  test_connector_runtime.py  test_context_provenance.py  test_crewai_nornyx_comparison.py  test_decision_boundary_evidence_quality.py  test_delivery_state_renderers.py  test_dev_acceleration_overlay.py  test_dev_pmo_status_contract.py  test_goal_plan.py  (+60 more)
(+608 files in other folders)
