[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nornyx"
version = "1.1.1"
description = "Nornyx: a context-native agentic engineering language scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Mazin Marji and Nornyx Contributors"}]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
nornyx = "nornyx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nornyx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
