[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nornyx"
version = "1.6.1"
description = "A generalized agentic contract/control-plane language for governed AI software delivery."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Mazin Marji and Nornyx Contributors"}]
keywords = ["agentic", "ai-governance", "control-plane", "contract", "schema", "ai-safety", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["PyYAML>=6.0", "jsonschema>=4.21", "referencing>=0.31"]

[project.urls]
Homepage = "https://github.com/mazinmarji/nornyx"
Repository = "https://github.com/mazinmarji/nornyx"
Documentation = "https://github.com/mazinmarji/nornyx/blob/main/docs/USE_IN_YOUR_REPO.md"
Changelog = "https://github.com/mazinmarji/nornyx/blob/main/CHANGELOG.md"
"Case study" = "https://github.com/mazinmarji/nornyx/blob/main/docs/CASE_STUDY_multi_repo_governance.md"
Issues = "https://github.com/mazinmarji/nornyx/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
nornyx = "nornyx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nornyx*"]

[tool.setuptools.package-data]
nornyx = ["examples/*.nyx", "schemas/*.json", "profiles_data/*.json", "profiles_data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
